--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SpaceFirewall.loader.js";
+      var loaderUrl = buildUrl + "/SpaceFirewallWebPlayable.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SpaceFirewall.data.br",
-        frameworkUrl: buildUrl + "/SpaceFirewall.framework.js.br",
-        codeUrl: buildUrl + "/SpaceFirewall.wasm.br",
+        dataUrl: buildUrl + "/SpaceFirewallWebPlayable.data.br",
+        frameworkUrl: buildUrl + "/SpaceFirewallWebPlayable.framework.js.br",
+        codeUrl: buildUrl + "/SpaceFirewallWebPlayable.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SillyJammers",
         productName: "Space Firewall",
