--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/SpaceFirewallWebPlayable.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SpaceFirewallWebPlayable.data.br",
-        frameworkUrl: buildUrl + "/SpaceFirewallWebPlayable.framework.js.br",
-        codeUrl: buildUrl + "/SpaceFirewallWebPlayable.wasm.br",
+        dataUrl: buildUrl + "/SpaceFirewallWebPlayable.data",
+        frameworkUrl: buildUrl + "/SpaceFirewallWebPlayable.framework.js",
+        codeUrl: buildUrl + "/SpaceFirewallWebPlayable.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "SillyJammers",
         productName: "Space Firewall",
